[gd_scene load_steps=11 format=3 uid="uid://co5tex0qy1qvm"]

[ext_resource type="Script" uid="uid://bhvoueu1d0217" path="res://Menus/mainmenu.gd" id="1_s1n6v"]
[ext_resource type="Texture2D" uid="uid://cpajag2j5w4lc" path="res://Art/im_john_and_im_doeing_it_im_doeing_it_so_hard_lines_up_now.png" id="2_nrt5m"]
[ext_resource type="Texture2D" uid="uid://vsxytl2mqveo" path="res://Art/sigma_boy.png" id="3_agqp0"]
[ext_resource type="Script" uid="uid://6ibijlphwgjw" path="res://Menus/backg.gd" id="3_evww1"]
[ext_resource type="Texture2D" uid="uid://d1g6dpp7gjd7q" path="res://Art/credits_button.png" id="4_agqp0"]
[ext_resource type="Texture2D" uid="uid://bplvac4ggvbmk" path="res://Art/start_screen_press.png" id="5_evww1"]
[ext_resource type="Texture2D" uid="uid://dg4sukeds842" path="res://Art/credits_button_pressed.png" id="5_nrt5m"]
[ext_resource type="AudioStream" uid="uid://c3dvf7il4q23f" path="res://Music + Sfx/Menu Start Button.wav" id="8_lmeug"]
[ext_resource type="AudioStream" uid="uid://cq5hotwwfk43u" path="res://Music + Sfx/Game Start.wav" id="9_s7sdj"]
[ext_resource type="AudioStream" uid="uid://bhir1gc7eh6b2" path="res://Music + Sfx/Title Screen Music (1).mp3" id="10_b4146"]

[node name="Mainmenu" type="CanvasLayer"]
script = ExtResource("1_s1n6v")

[node name="backg" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nrt5m")
script = ExtResource("3_evww1")

[node name="backg2" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1080.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nrt5m")
script = ExtResource("3_evww1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 83.0
offset_top = 617.0
offset_right = 471.0
offset_bottom = -91.0
grow_vertical = 2

[node name="Play" type="TextureButton" parent="Control/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_agqp0")
texture_pressed = ExtResource("5_evww1")
stretch_mode = 5

[node name="Credits" type="TextureButton" parent="Control/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("4_agqp0")
texture_pressed = ExtResource("5_nrt5m")
stretch_mode = 6

[node name="Title" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -140.5
offset_right = 140.5
offset_bottom = 67.0
grow_horizontal = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_lmeug")
volume_db = -5.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_s7sdj")
volume_db = -10.0
autoplay = true

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_b4146")
volume_db = -15.0

[connection signal="pressed" from="Control/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="finished" from="AudioStreamPlayer2" to="." method="_on_audio_stream_player_2_finished"]
